--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .container {
-    max-width: 40%;
-    margin: 0 auto;
+    max-width: 30%;
+    height: 500px;
+    margin: 5rem auto;
     border: 1px solid red;
     padding: 2rem;
 }
@@ -12,12 +13,14 @@ button {
     /* border: 1px solid red; */
     display: block;
     /* width: 100%;*/
-    margin: 1rem auto;
+    margin: 1.3rem auto;
     /* max-width: 60%; */
 }
 
 .result {
+    margin: 5rem auto;
+    height: 100px;
     text-align: center;
-    padding: 1rem;
+    padding-top: 2rem;
     border: 1px solid red;
 }
