--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,24 @@
 body {
-    background-color: #15616D;
+    background: #000428;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #004e92, #000428);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #004e92, #000428);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    /* background-repeat: no-repeat; */
+    background-attachment: fixed;
 }
 
 .container {
-    background-color: #FF7D00;
+    color: aliceblue;
+    backdrop-filter: blur(5px) saturate(195%);
+    -webkit-backdrop-filter: blur(5px) saturate(195%);
+    background-color: rgba(80, 227, 194, 0.27);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
     max-width: 30%;
     height: 500px;
     margin: 5rem auto;
-    border: 1px solid red;
     padding: 2rem;
 }
 
@@ -27,12 +38,15 @@ body {
     height: 100px;
     text-align: center;
     padding-top: 2rem;
+    background: transparent;
 }
 
 .inp-style {
     padding: 0.5rem;
+    background: transparent;
     border-radius: 5px;
     outline: none;
+    border: 2px solid #90e0ef;
 }
 
 #submit {
@@ -43,6 +57,8 @@ body {
     padding: 0.5rem;
     border-radius: 5px;
     outline: none;
+    border: none;
+    background-color: #40916c;
 }
 
 #reset {
@@ -52,4 +68,6 @@ body {
     padding: 0.5rem;
     border-radius: 5px;
     outline: none;
+    border: none;
+    background-color: #bc3908;
 }
