--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap');
 body {
     background: #000428;
     /* fallback for old browsers */
@@ -7,6 +8,7 @@ body {
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     /* background-repeat: no-repeat; */
     background-attachment: fixed;
+    font-family: 'Roboto Mono', monospace;
 }
 
 .container {
